ansible/roles/cluster_config/files/kube-ops-view.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    application: kube-ops-view
    version: v0.7.1
  name: kube-ops-view
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view
  template:
    metadata:
      labels:
        application: kube-ops-view
        version: v0.7.1
    spec:
      serviceAccount: kube-ops-view
      containers:
      - name: service
        image: hjacobs/kube-ops-view:0.7.1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view
  name: kube-ops-view
  namespace: kube-system
spec:
  selector:
    application: kube-ops-view
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
